--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -53,15 +53,22 @@ img {
   padding-right: 20px;
 }
 @media (max-width: 600px) {
+  img {
+    max-width: 50px;
+  }
   .module {
     font-size: 10px;
-    max-height: 75px; }
+    max-height: 175px; }
 }
 @media (max-width: 1024px) {
+  img {
+    max-width: 50px;
+  }
   .grid {
     margin: 0;
   }
   .module {
     min-width: 60px;
+    max-height: 375px;
   }
 }
