small edit css for mobile

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <div class="module hero">
       <h4>{{product.name}}</h4>
       <img alt="{{product.name}}" src="{{product.img}}">
-  	  <p>{{product.price}}</p>
+  	  <p class="price">{{product.price}}</p>
   	  <button>Заказать</button>
     </div>
   </a>
