--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -22,8 +22,14 @@ h4 {
   position: relative;
 }
 img {
-  max-width: 200px;
-  max-height: 350px;
+  max-width: 100%;
+  max-height: 300px;
+}
+button {
+  background-color: #d0cece;
+  font-size: 16px;
+  padding: 10px 15px;
+  color: #616161;
 }
 .grid {
   margin: 0;
@@ -53,22 +59,32 @@ img {
   padding-right: 20px;
 }
 @media (max-width: 600px) {
+  .col-1-4 {
+    width: 100%;
+  }
   img {
-    max-width: 50px;
+    max-height: 248px;
+    max-width: 200px;
+  }
+  h4 {
+    font-size: 22px;
+  }
+  .price {
+    font-size: 18px;
   }
   .module {
     font-size: 10px;
-    max-height: 175px; }
+    max-height: 535px; }
 }
 @media (max-width: 1024px) {
   img {
-    max-width: 50px;
+    width: 100%;
   }
   .grid {
     margin: 0;
   }
   .module {
     min-width: 60px;
-    max-height: 375px;
+    max-height: 535px;
   }
 }
